--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #141414!important;
+    background-color: #fff!important;
     height: 100v;
     overflow-x: hidden;
 }
 
 /* nav */
-.bg-drak{
+.bg-white{
     position: sticky!important;
     background-color: #141414!important;
     top: 0px;
@@ -21,36 +21,56 @@ body{
     max-width: 100%;
 }
 .bg-img{
-    background-image: url(../img/bg-masthead.jpg);
+    background-image: url(../img/bg-img.png);
     background-repeat: no-repeat;
     height: 500px;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    background-blend-mode: multiply;
-    background-color: #141414!important;
-    display: flex;
     align-items: center;
     max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
     
 }
+.bg-position{
+    position: absolute;
+    top: 420px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.bg-position .img-fidelice{
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    border: 5px solid #fff;
+}
 .navbar .navbar-nav >a{
-    color: #fff;
+    color: gray;
     text-transform: uppercase;
     font-weight: 400;
 }
-.logo{
-    font-size: 20px;
-    font-weight: 700;
+.logo h1{
+     color: #141414;
+     font-size: 30px;
+     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-strong{
-    color: #ffc107;
+.logo span{
+    border: 3px solid goldenrod;
+    padding: 2px;
+    border-bottom-color: #fff;
+    border-top-color: goldenrod;
+    border-right-color: #fff;
+    color: goldenrod;
 }
-
 .btn-bg{
-    border:1px solid #ffc107!important;
+    border:1px solid #fff!important;
     color: #fff!important;
-    border-radius: 10em!important;
+    border-radius: 5px!important;
     padding: 10px 25px!important;
     transition: all 0.3s linear;
     -webkit-transition: all 0.3s linear;
@@ -58,142 +78,81 @@ strong{
     border: none;
 }
 .btn-bg:hover{
-    background-color: #c0a963;
+    background-color: #fff;
+    color: #141414!important;
+    
 }
 
-/* Apropos */
+/* section-one */
 
-#propos{
+.section-box{
+    background-color: #ddd;
+    margin-top: 150px;
+    display: flex;
+    align-items: center;
+}
+.section-box h2{
+    font-size: 40px;
+    font-weight: 300;
+}
+.vh-500{
     height: 500px;
     display: flex;
     align-items: center;
-    color: #fff;
 }
-#propos .carre img{
-    border-radius: 100%;
-    transition: all 0.4s linear;
-    -webkit-transition: all 0.3s linear;
-    position: relative;
-    display: block;
-}
-#propos .carre{
-    width: 200px;
-    height: 200px;
-    border-radius: 100%;
+.vh-300{
+    height: 350px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    border: 3px solid #ffc107;
-    border-top-color: #fff;
-    -webkit-transform: rotate(12deg);
-    -ms-transform: rotate(12deg);
-    overflow: hidden;
-    position: relative;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    animation-delay: 1s;
 }
-.carre:hover img{
-    transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-   
- }
 
- /* services */
- #services{
-    height: 400px;
-    display: flex;
-    align-items: center;
-    color: #fff;
-}
- #service .carre{
-    width: 150px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 3px solid #ffc107;
-    border-top-color: #fff;
-    -webkit-transform: rotate(80deg);
-    -ms-transform: rotate(80deg);
-    overflow: hidden;
-    position: relative;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    animation-delay: 1s;
-}
-#service .carre p{
-    background-color: #fff;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: all 0.3s ease-in;
-    color: #ffc107;
- }
-#service .carre p:hover{
-     transform: scale(1.05);
-     width: 150px;
-     height: 150px;
-     background-color: #141414;
-     color: #fff;
-     -webkit-transform: rotate(-100deg);
-    -ms-transform: rotate(-100deg);
- }
-
- input,textarea{
-    box-shadow: none!important;
-    outline: none!important;
-}
-.slideInDown{
-    animation-delay: 1s;
-}
-.border{
-    border:1px solid #ffc107;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-}
-.border:hover{
-    background-color: #ffc107;
-    
-}
-.article{
-    overflow: hidden;
-    position: relative;
+.box-apropos figure img{
     width: 100%;
-    height: 100%;
-    cursor: default;
-    border-radius: 10px;
-    position: relative;
+    max-width: 100%;
+}
+
+.box-apropos h3{
+    font-size: 35px;
+    font-weight: 300;
+}
+.box-apropos h4{
+    font-size: 25px;
+    font-weight: 300;
+}
+article h3{
+    font-size: 25px;
+    font-weight: 300;
+}
+article h4{
+    font-size: 25px;
+    font-weight: 300;
+}
+.vh-300 h3{
+    font-size: 25px;
+    font-weight: 300;
+}
+.box-apropos p{
+    font-size: 16px;
+    font-weight: 300;
+}
+.box-apropos .btn-bg{
+    font-size: 16px;
+    font-weight: 300;
+}
+.section-projet{
+    height: 500px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-direction: column;
 }
-.article img{
-    transition: all 0.4s linear;
-    -webkit-transition: all 0.3s linear;
-    position: relative;
-    display: block;
-    
+.section-projet .col-md-4 figure{
+    box-shadow: 0px 3px 10px rgba(0 0 0 0.2);
 }
-.article:hover img{
-   transform: scale(1.2);
-   -webkit-transform: scale(1.2);
-   -ms-transform: scale(1.2);
-  
+.section-contact{
+   background-color: #141414;
+   color: #fff;
+   padding: 10px 0px;
 }
-.title{
-    position: absolute;
-    top: 20px;
-    text-align: center;
-    color: #ffc107!important;
-}
-i{
-    color: #ffc107;
-}
-footer{
-    background-color: #1b1c1c;
+textarea{
+    height: 200px;
 }
