--- a/css/style.css
+++ b/css/style.css
@@ -1,198 +1,469 @@
+:root{
+    --bg-primary: #047aed;
+    --bg-white: #fff;
+    --bg-secondary: #2a2a4e;
+    --color-primary: #047aed;
+}
+
 *{
     box-sizing: border-box;
-    margin: 0px;
     padding: 0px;
+    margin: 0px;
 }
 html{
     scroll-behavior: smooth;
 }
+
 body{
-    background-color: #fff!important;
-    height: 100v;
-    
+   font-family: 'loto', sans-serif;
+   color: #333;
+   line-height: 1.6;
 }
 
-/* nav */
-.bg-white{
-    position: sticky!important;
-    background-color: #141414!important;
-    top: 0px;
-    z-index: 2;
-    max-width: 100%;
-}
-.bg-img{
-    background-image: url(../img/bg-img.png);
-    background-repeat: no-repeat;
-    height: 500px;
-    background-size: cover;
-    background-position: center;
-    align-items: center;
-    max-width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-    
-}
-.bg-position{
-    position: absolute;
-    top: 420px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-.bg-position .img-fidelice{
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    border: 5px solid #fff;
-}
-.navbar .navbar-nav >a{
-    color: gray;
-    text-transform: uppercase;
-    font-weight: 400;
-}
-.logo h1{
-     color: #141414;
-     font-size: 30px;
-     font-family: Georgia, 'Times New Roman', Times, serif;
-}
-.logo span{
-    border: 3px solid goldenrod;
-    padding: 2px;
-    border-bottom-color: #fff;
-    border-top-color: goldenrod;
-    border-right-color: #fff;
-    color: goldenrod;
-}
-.btn-bg{
-    border:1px solid #fff!important;
-    color: #fff!important;
-    border-radius: 5px!important;
-    padding: 10px 25px!important;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    animation-delay: 1s;
-    border: none;
-}
-.btn-bg:hover{
-    background-color: #fff;
-    color: gray!important;
-    
-}
-.navbar-nav .nav-link{
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-}
-.navbar-nav .nav-link:hover{
-    color: goldenrod;
+h1,
+h2{
+    font-weight: 300;
+    line-height: 1.2;
+    margin: 10px 0;
 }
 
-/* section-one */
-
-.section-box{
-    background-color: #ddd;
-    margin-top: 150px;
-    display: flex;
-    align-items: center;
-}
-.section-box h2{
-    font-size: 40px;
-    font-weight: 400;
-}
-.vh-500{
-    height: 500px;
-    display: flex;
-    align-items: center;
+p{
+    margin: 10px 0px;
 }
 
-.vh-300{
-    height: 350px;
-    display: flex;
-    align-items: center;
-}
-
-.box-apropos figure img{
+img{
     width: 100%;
-    max-width: 100%;
 }
 
-.box-apropos h3{
-    font-size: 35px;
-    font-weight: 300;
+/* navbar */
+
+.navbar{
+    background-color: var(--bg-primary);
+    color: #fff;
+    height: 70px;
+    position: sticky;
+    top: 0px;
+    z-index: 200;
 }
-.box-apropos h4{
-    font-size: 25px;
-    font-weight: 300;
+
+.navbar a:hover{
+    border-bottom: 2px solid #fff;
 }
-article h3{
+
+
+/* integration */
+
+.integration{
+    background-color: var(--bg-primary);
+    height: 400px;
+    color: #fff;
+    position: relative;
+}
+
+.integration .grid{
+    grid-template-columns: 55% 45%;
+    gap: 30px;
+}
+
+.integration-text h1{
+    font-size: 40px;
+}
+
+.integration-text p{
+    margin: 10px 0;
+    font-size: 20px;
+}
+
+.integration-figure{
+    border-radius: 100%;
+    position: relative;
+    top: 80px;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.integration-figure img{
+    border: 3px solid #fff;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 100%;
+    width: 300px;
+    height: 300px;
+}
+
+.integration::before,
+.integration::after{
+    content: '';
+    position: absolute;
+    height: 100px;
+    bottom: -50px;
+    left: 0px;
+    right: 0px;
+    background-color: var(--bg-white);
+    -webkit-transform: skewY(-4deg) ;
+    -moz-transform: skewY(-4deg) ;
+    -ms-transform: skewY(-4deg) ;
+}
+
+/* Apropos */
+
+.Apropos,
+.compétences,
+.compétences{
+    margin-top: 130px;
+}
+
+.Apropos aside,
+.compétences aside,
+.box-shadow aside{
+    text-align: center;
+    margin: 40px 0;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    text-transform: uppercase;
+    color: var(--color-primary);
+    
+}
+
+.trace{
+    border: 1px solid var(--color-primary);
+    width: 100px;
+}
+
+.Apropos .d-flex{
+    gap: 40px;
+}
+
+.Apropos .Apropos-figure{
+    width: auto;
+    
+}
+
+.Apropos .Apropos-text{
+    width: 70%;
+}
+
+.Apropos-text h2{
     font-size: 30px;
     font-weight: 300;
 }
-article h4{
-    font-size: 25px;
-    font-weight: 300;
-}
-.vh-300 h3{
-    font-size: 25px;
-    font-weight: 300;
-}
-.box-apropos p{
+
+.Apropos-text p{
     font-size: 16px;
+}
+
+/* compétences */
+
+.compétences .progress{
+    width: 100%;
+    margin: 10px 0px;
+}
+
+span{
+    font-family: 'loto',sans-serif;
+}
+
+/* Portfolio */
+.Portfolio{
+    text-align: center;
+    margin-top: 130px;
+    
+}
+
+.Portfolio h2{
+    font-size: 30px;
     font-weight: 300;
 }
-.box-apropos .btn-bg{
-    font-size: 16px;
-    font-weight: 300;
-}
-.section-projet{
-    height: 500px;
+
+.Portfolio aside{
+    text-align: center;
+    margin: 40px 0;
+    font-size: 30px;
     display: flex;
     align-items: center;
-    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    text-transform: uppercase;
+    color: var(--color-primary);
 }
-.section-projet .col-md-4 figure{
-    box-shadow: 0px 3px 10px rgba(0 0 0 0.2);
+
+.Projet{
+    z-index: 150;
+    position: relative;
+    overflow: hidden;
 }
-.section-contact{
-   background-color: #141414;
-   color: #fff;
-   padding: 10px 0px;
+
+.Projet img{
+    transition: all 0.4s ease;
+    width: 100%;
+    max-width: 100%;
 }
-textarea{
-    height: 200px;
+.Projet:hover img{
+    transform: scale(1.2);
 }
-/* Tabl*/
+
+.Portfolio .projet-titre{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    display: flex;
+    align-items: flex-end;
+    transition: all 0.4s ease;
+    opacity: 0;
+}
+
+.Projet:hover .projet-titre{
+    opacity: 1;
+}
+.Portfolio .projet-titre h3{
+    font-size: 20px;
+    font-weight: 300;
+    color: #fff;
+}
+/* contact */
+
+.Contact{
+    background-color: var(--bg-primary);
+    height: 400px;
+    color: #fff;
+    position: relative;
+    margin-top: 130px;
+}
+
+.Contact::before,
+.contact::after{
+    content: '';
+    position: absolute;
+    height: 100px;
+    top: -50px;
+    left: 0px;
+    right: 0px;
+    background-color: var(--bg-white);
+    -webkit-transform: skewY(-4deg) ;
+    -moz-transform: skewY(-4deg) ;
+    -ms-transform: skewY(-4deg) ;
+    z-index: 100;
+}
+
+.box-shadow{
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    background-color: var(--bg-white);
+    border-radius: 20px;
+    z-index: 100;
+    color: #333;
+    padding: 20px;
+    position: absolute;
+    top: -20px;
+    left: 0px;
+    right: 0px;
+    border: none;
+    padding-bottom: 20px!important;
+}
+
+.form-controle{
+    margin: 10px 0px;
+}
+
+input[type="email"],
+input[type="password"]{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+.textarea{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+input:focus,
+.textarea{
+    outline: none;
+}
+
+.contact-social{
+    width: 50%;
+    float: left;
+}
+.contact-form{
+    width: 50%;
+    float: left;
+}
+
+/* footer */
+
+footer{
+    text-align: center;
+    background-color: var(--bg-secondary);
+    color: #fff;
+    padding: 20px 0px;
+}
+/* utilities */
+
+/* Tablets and under */
+
 @media(max-width:768px){
-    .vh-500{
+    .Apropos .d-flex{
+        flex-direction: column;
+    }
+
+    .Apropos .Apropos-figure,
+    .Apropos .Apropos-text{
+        width: 100%; 
+    }
+
+    .Contact{
+        margin-top: 50px;
+    }
+    .integration{
         height: auto;
     }
-    .section-projet{
-        height: auto;
+}
+@media(max-width:760px){
+    .integration-text{
+        text-align: center;
+        margin-top: 70px!important;
+    }
+    .navbar ul{
+        padding: 10px;
+        background-color: var(--bg-primary);
     }
 }
 
-@media(max-width:768px){
-    .vh-300{
+
+
+
+/* Mobile phone */
+
+@media(max-width:670px){
+    .navbar{
         height: auto;
+    }
+    .navbar .d-flex{
+        flex-direction: column;
+    }
+    .navbar ul{
+        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+    .integration .grid,
+    .Portfolio .grid-3{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        
+    }
+    .Apropos aside,
+    .compétences aside,
+    .Portfolio aside,
+    .box-shadow aside{
+        font-size: 16px;
+        gap: 10px;
+    }
+    .trace{
+        width: 80px;
+    }
+    .Portfolio h2{
+        font-size: 20px;
+    }
+    .Portfolio .projet-titre h3{
+        font-size: 16px;
     }
 }
-/* phone */
-@media(max-width:320px){
-    .vh-500{
+
+@media(max-width:600px){
+    .integration{
         height: auto;
     }
-    .section-projet{
+    .integration-text{
+        text-align: center;
+    }
+    .integration-figure{
+        justify-self: center;
+        margin: auto;
+    }
+    .integration-text h1{
+        font-size: 30px;
+    }
+    .contact-social,
+    .contact-form{
+        width: 100%;
+        float: none;
+    }
+    .Contact{
         height: auto;
     }
+    
+    footer{
+        height: 100%;
+    }
+   
 }
 @media(max-width:320px){
-    .vh-300{
-        height: auto;
+  .integration-text h1{
+      font-size: 20px;
+  }
+  .Apropos-text h2,
+  .Portfolio h2{
+     font-size: 16px;
+  } 
+  p{
+      font-size: 12px!important;
+  }
+  span{
+      font-size: 12px;
+  }
+  .Apropos aside,
+    .compétences aside,
+    .Portfolio aside,
+    .box-shadow aside{
+        font-size: 12px;
+        gap: 5px;
     }
-    h2{
-        font-size: 30px!important;
+    .trace{
+        width: 60px!important;
     }
+}
+
+/* .grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+} */
+/* .grid-3{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+} */
+
+.btn{
+    display: inline-block;
+    border: none;
+    background-color: var(--bg-primary);
+    color: #fff;
+    cursor: pointer;
+    padding: 10px 30px;
+    border-radius: 5px;
+}
+
+.btn-outline{
+    background-color: transparent;
+    border: 1px solid #fff;
+}
+
+.btn:hover{
+    transform: scale(0.98);
 }
